# Heat-Transfer-CUDA

./: .Rhistory  .gitignore  CMakeLists.txt  Heat_Transfer_CUDA  main.cu
include/: print.h
include/core/: init.h  kernelMode.h  swapCA.h
include/cuda/: globalMemory_kernel.cuh  global_kernel.cuh  kernel_config.cuh  run_kernels.cuh  tiledHalo_kernel.cuh  tiled_kernel.cuh
plot/: .RData
readMe/: .Rhistory  plot.R
src/: heatTransfer_kernel.cu  heatTransfer_kernel.cuh  init.cpp  main.cu  print.cpp  swapCA.cpp  swapCA.h
src/core/: init.cpp  swapCA.cpp
src/cuda/: global_kernel.cu  run_kernels.cu  tiledHalo_kernel.cu  tiled_kernel.cu
src/cuda/globalMemoryVersion/: globalMemory_kernel.cu
src/utils/: print.cpp
